force-app/main/default/objects/FinServ__CustomLabelConf__mdt/FinServ__CustomLabelConf__mdt.object-meta.xml
<CustomObject>
    <description
  >Defines custom label overrides on pages that use field sets.</description>
    <label>CustomLabelConf</label>
    <pluralLabel>CustomLabelConfs</pluralLabel>
</CustomObject>