force-app/main/default/objects/FinServ__CustomLabelConf__mdt/fields/FinServ__NewLabel__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NewLabel__c</fullName>
    <label>New Label</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>