force-app/main/default/objects/FinServ__CustomLabelConf__mdt/fields/FinServ__ObjectFieldName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ObjectFieldName__c</fullName>
    <label>Object Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>