force-app/main/default/objects/FinServ__CustomLabelConf__mdt/fields/FinServ__ObjectRTNamespace__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ObjectRTNamespace__c</fullName>
    <defaultValue>&quot;Industries&quot;</defaultValue>
    <label>Record Type Namespace</label>
    <length>200</length>
    <type>Text</type>
</CustomField>