force-app/main/default/objects/FinServ__CustomLabelConf__mdt/fields/FinServ__ViewName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ViewName__c</fullName>
    <label>View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>